Llamar a las funciones de comprobación de rebote una única vez por ciclo
Las funciones que comprobaban las colisiones eliminaban el ladrillo tras detectar que sí lo había tocado.
Esto evitaba que al llamarlas otra vez en el mismo fotograma estas devolvieran la colisión correcta, ya que el ladrillo ya se consideraba eliminado.
Se ha corregido el error haciendo que solo se llame a estas funciones en cada interrupción del temporizador, almacenando los valores que devuelven en variables. Estas variables son las que se usan en todo el sistema lógico.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "stdio.h": "c",
         "juego.h": "c",
-        "definiciones.h": "c"
+        "definiciones.h": "c",
+        "cmath": "c"
     }
 }
